readme update, license year